// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorSelector > Render > renders correctly in OKLCH mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex flex-col gap-3 bg-default-100 p-4 rounded-xl scroll-mt-20"
      data-uid="ColorSelector"
      id="0-oklch(0.7 0.2 120)"
    >
      <style>
        
      .popover-content-0 { background-color: oklch(0.7 0.2 120); }
      .popover-base-0 {
        &:before {
          background-color: oklch(0.7 0.2 120);
          
        }
       }
      
      </style>
      <div
        class="flex items-center justify-between"
      >
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
          data-filled="true"
          data-filled-within="true"
          data-has-value="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full h-8 min-h-8 px-2 rounded-small transition-none is-filled"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border pb-0"
                data-slot="inner-wrapper"
              >
                <input
                  aria-label=" "
                  class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                  data-filled="true"
                  data-filled-within="true"
                  data-slot="input"
                  id="react-aria-_r_19_"
                  name="color-name-0"
                  tabindex="0"
                  title=""
                  type="text"
                  value="Primary"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center ml-2"
        >
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground data-[hover=true]:opacity-hover"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            OKLCH
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M181.66,170.34a8,8,0,0,1,0,11.32l-48,48a8,8,0,0,1-11.32,0l-48-48a8,8,0,0,1,11.32-11.32L128,212.69l42.34-42.35A8,8,0,0,1,181.66,170.34Zm-96-84.68L128,43.31l42.34,42.35a8,8,0,0,0,11.32-11.32l-48-48a8,8,0,0,0-11.32,0l-48,48A8,8,0,0,0,85.66,85.66Z"
              />
            </svg>
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Change color options"
            class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
            data-react-aria-pressable="true"
            data-slot="trigger"
            tabindex="0"
            type="button"
          >
            <span
              class="size-8 inline-flex items-center justify-center"
            >
              <svg
                class="text-base"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Zm88-29.84q.06-2.16,0-4.32l14.92-18.64a8,8,0,0,0,1.48-7.06,107.21,107.21,0,0,0-10.88-26.25,8,8,0,0,0-6-3.93l-23.72-2.64q-1.48-1.56-3-3L186,40.54a8,8,0,0,0-3.94-6,107.71,107.71,0,0,0-26.25-10.87,8,8,0,0,0-7.06,1.49L130.16,40Q128,40,125.84,40L107.2,25.11a8,8,0,0,0-7.06-1.48A107.6,107.6,0,0,0,73.89,34.51a8,8,0,0,0-3.93,6L67.32,64.27q-1.56,1.49-3,3L40.54,70a8,8,0,0,0-6,3.94,107.71,107.71,0,0,0-10.87,26.25,8,8,0,0,0,1.49,7.06L40,125.84Q40,128,40,130.16L25.11,148.8a8,8,0,0,0-1.48,7.06,107.21,107.21,0,0,0,10.88,26.25,8,8,0,0,0,6,3.93l23.72,2.64q1.49,1.56,3,3L70,215.46a8,8,0,0,0,3.94,6,107.71,107.71,0,0,0,26.25,10.87,8,8,0,0,0,7.06-1.49L125.84,216q2.16.06,4.32,0l18.64,14.92a8,8,0,0,0,7.06,1.48,107.21,107.21,0,0,0,26.25-10.88,8,8,0,0,0,3.93-6l2.64-23.72q1.56-1.48,3-3L215.46,186a8,8,0,0,0,6-3.94,107.71,107.71,0,0,0,10.87-26.25,8,8,0,0,0-1.49-7.06Zm-16.1-6.5a73.93,73.93,0,0,1,0,8.68,8,8,0,0,0,1.74,5.48l14.19,17.73a91.57,91.57,0,0,1-6.23,15L187,173.11a8,8,0,0,0-5.1,2.64,74.11,74.11,0,0,1-6.14,6.14,8,8,0,0,0-2.64,5.1l-2.51,22.58a91.32,91.32,0,0,1-15,6.23l-17.74-14.19a8,8,0,0,0-5-1.75h-.48a73.93,73.93,0,0,1-8.68,0,8,8,0,0,0-5.48,1.74L100.45,215.8a91.57,91.57,0,0,1-15-6.23L82.89,187a8,8,0,0,0-2.64-5.1,74.11,74.11,0,0,1-6.14-6.14,8,8,0,0,0-5.1-2.64L46.43,170.6a91.32,91.32,0,0,1-6.23-15l14.19-17.74a8,8,0,0,0,1.74-5.48,73.93,73.93,0,0,1,0-8.68,8,8,0,0,0-1.74-5.48L40.2,100.45a91.57,91.57,0,0,1,6.23-15L69,82.89a8,8,0,0,0,5.1-2.64,74.11,74.11,0,0,1,6.14-6.14A8,8,0,0,0,82.89,69L85.4,46.43a91.32,91.32,0,0,1,15-6.23l17.74,14.19a8,8,0,0,0,5.48,1.74,73.93,73.93,0,0,1,8.68,0,8,8,0,0,0,5.48-1.74L155.55,40.2a91.57,91.57,0,0,1,15,6.23L173.11,69a8,8,0,0,0,2.64,5.1,74.11,74.11,0,0,1,6.14,6.14,8,8,0,0,0,5.1,2.64l22.58,2.51a91.32,91.32,0,0,1,6.23,15l-14.19,17.74A8,8,0,0,0,199.87,123.66Z"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Remove color"
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              class="text-base"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="space-y-3"
        data-uid="OKLCH"
      >
        <div
          class="flex h-12 items-center gap-2 pl-3 rounded-large border border-default-200"
        >
          <button
            aria-label="Color Circle"
            class="rounded-full shrink-0 size-6"
            data-color="oklch(0.7 0.2 120)"
            data-uid="ColorCircle"
            style="background-color: oklch(0.7 0.2 120);"
            type="button"
          />
          <div
            class="flex flex-1 items-center"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 !duration-150 transition-colors motion-reduce:transition-none rounded-none border-0 px-2 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <span
                      class="font-semibold text-foreground-500"
                    >
                      L
                    </span>
                    <input
                      aria-label=" "
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium data-[has-end-content=true]:pe-0.5 text-right is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-has-end-content="true"
                      data-has-start-content="true"
                      data-slot="input"
                      data-type="text"
                      id="react-aria-_r_1n_"
                      placeholder=" "
                      readonly=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="70"
                    />
                    <span
                      class="text-foreground-500"
                    >
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 !duration-150 transition-colors motion-reduce:transition-none rounded-none border-0 px-2 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <span
                      class="font-semibold text-foreground-500"
                    >
                      C
                    </span>
                    <input
                      aria-label=" "
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-has-start-content="true"
                      data-slot="input"
                      data-type="text"
                      id="react-aria-_r_1s_"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value="0.20"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 !duration-150 transition-colors motion-reduce:transition-none rounded-none border-0 px-2 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <span
                      class="font-semibold text-foreground-500"
                    >
                      H
                    </span>
                    <input
                      aria-label=" "
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium data-[has-end-content=true]:pe-0.5 text-right is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-has-end-content="true"
                      data-has-start-content="true"
                      data-slot="input"
                      data-type="text"
                      id="react-aria-_r_21_"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value="120"
                    />
                    <span
                      class="text-foreground-500"
                    >
                      °
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            aria-label="Random color"
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium text-medium gap-3 rounded-large px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground min-w-12 w-12 h-12 data-[hover=true]:opacity-hover rounded-s-none"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              class="text-xl"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
              />
            </svg>
          </button>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, oklch(0 0.2 120), oklch(0.7 0.2 120), oklch(1 0.2 120));"
        >
          <div
            aria-label="Lightness"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_26_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                L
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 70%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 70%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_26_"
                      aria-orientation="horizontal"
                      aria-valuetext="0.7"
                      id="react-aria-_r_26_-0"
                      max="1"
                      min="0"
                      step="0.001"
                      tabindex="0"
                      type="range"
                      value="0.7"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, oklch(0.7 0 120), oklch(0.7 0.19367 120));"
        >
          <div
            aria-label="Chroma"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_2c_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                <button
                  class="shrink-0 text-lg"
                  type="button"
                >
                  C
                </button>
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 99.65405070480713%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 99.65405070480713%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_2c_"
                      aria-orientation="horizontal"
                      aria-valuetext="0.193"
                      id="react-aria-_r_2c_-0"
                      max="0.19367"
                      min="0"
                      step="0.001"
                      tabindex="0"
                      type="range"
                      value="0.193"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, oklch(0.7 0.2 0), oklch(0.7 0.2 60), oklch(0.7 0.2 120), oklch(0.7 0.2 180), oklch(0.7 0.2 240), oklch(0.7 0.2 300), oklch(0.7 0.2 360));"
        >
          <div
            aria-label="Hue"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_2k_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                H
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 33.33333333333333%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 33.33333333333333%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_2k_"
                      aria-orientation="horizontal"
                      aria-valuetext="120"
                      id="react-aria-_r_2k_-0"
                      max="360"
                      min="0"
                      step="0.001"
                      tabindex="0"
                      type="range"
                      value="120"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorSelector > Render > renders correctly in SRGB mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex flex-col gap-3 bg-default-100 p-4 rounded-xl scroll-mt-20"
      data-uid="ColorSelector"
      id="0-#FF0044"
    >
      <style>
        
      .popover-content-0 { background-color: #FF0044; }
      .popover-base-0 {
        &:before {
          background-color: #FF0044;
          
        }
       }
      
      </style>
      <div
        class="flex items-center justify-between"
      >
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
          data-filled="true"
          data-filled-within="true"
          data-has-value="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full h-8 min-h-8 px-2 rounded-small transition-none is-filled"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border pb-0"
                data-slot="inner-wrapper"
              >
                <input
                  aria-label=" "
                  class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                  data-filled="true"
                  data-filled-within="true"
                  data-slot="input"
                  id="react-aria-_r_1_"
                  name="color-name-0"
                  tabindex="0"
                  title=""
                  type="text"
                  value="Primary"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center ml-2"
        >
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground data-[hover=true]:opacity-hover"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            SRGB
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M181.66,170.34a8,8,0,0,1,0,11.32l-48,48a8,8,0,0,1-11.32,0l-48-48a8,8,0,0,1,11.32-11.32L128,212.69l42.34-42.35A8,8,0,0,1,181.66,170.34Zm-96-84.68L128,43.31l42.34,42.35a8,8,0,0,0,11.32-11.32l-48-48a8,8,0,0,0-11.32,0l-48,48A8,8,0,0,0,85.66,85.66Z"
              />
            </svg>
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Change color options"
            class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
            data-react-aria-pressable="true"
            data-slot="trigger"
            tabindex="0"
            type="button"
          >
            <span
              class="size-8 inline-flex items-center justify-center"
            >
              <svg
                class="text-base"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Zm88-29.84q.06-2.16,0-4.32l14.92-18.64a8,8,0,0,0,1.48-7.06,107.21,107.21,0,0,0-10.88-26.25,8,8,0,0,0-6-3.93l-23.72-2.64q-1.48-1.56-3-3L186,40.54a8,8,0,0,0-3.94-6,107.71,107.71,0,0,0-26.25-10.87,8,8,0,0,0-7.06,1.49L130.16,40Q128,40,125.84,40L107.2,25.11a8,8,0,0,0-7.06-1.48A107.6,107.6,0,0,0,73.89,34.51a8,8,0,0,0-3.93,6L67.32,64.27q-1.56,1.49-3,3L40.54,70a8,8,0,0,0-6,3.94,107.71,107.71,0,0,0-10.87,26.25,8,8,0,0,0,1.49,7.06L40,125.84Q40,128,40,130.16L25.11,148.8a8,8,0,0,0-1.48,7.06,107.21,107.21,0,0,0,10.88,26.25,8,8,0,0,0,6,3.93l23.72,2.64q1.49,1.56,3,3L70,215.46a8,8,0,0,0,3.94,6,107.71,107.71,0,0,0,26.25,10.87,8,8,0,0,0,7.06-1.49L125.84,216q2.16.06,4.32,0l18.64,14.92a8,8,0,0,0,7.06,1.48,107.21,107.21,0,0,0,26.25-10.88,8,8,0,0,0,3.93-6l2.64-23.72q1.56-1.48,3-3L215.46,186a8,8,0,0,0,6-3.94,107.71,107.71,0,0,0,10.87-26.25,8,8,0,0,0-1.49-7.06Zm-16.1-6.5a73.93,73.93,0,0,1,0,8.68,8,8,0,0,0,1.74,5.48l14.19,17.73a91.57,91.57,0,0,1-6.23,15L187,173.11a8,8,0,0,0-5.1,2.64,74.11,74.11,0,0,1-6.14,6.14,8,8,0,0,0-2.64,5.1l-2.51,22.58a91.32,91.32,0,0,1-15,6.23l-17.74-14.19a8,8,0,0,0-5-1.75h-.48a73.93,73.93,0,0,1-8.68,0,8,8,0,0,0-5.48,1.74L100.45,215.8a91.57,91.57,0,0,1-15-6.23L82.89,187a8,8,0,0,0-2.64-5.1,74.11,74.11,0,0,1-6.14-6.14,8,8,0,0,0-5.1-2.64L46.43,170.6a91.32,91.32,0,0,1-6.23-15l14.19-17.74a8,8,0,0,0,1.74-5.48,73.93,73.93,0,0,1,0-8.68,8,8,0,0,0-1.74-5.48L40.2,100.45a91.57,91.57,0,0,1,6.23-15L69,82.89a8,8,0,0,0,5.1-2.64,74.11,74.11,0,0,1,6.14-6.14A8,8,0,0,0,82.89,69L85.4,46.43a91.32,91.32,0,0,1,15-6.23l17.74,14.19a8,8,0,0,0,5.48,1.74,73.93,73.93,0,0,1,8.68,0,8,8,0,0,0,5.48-1.74L155.55,40.2a91.57,91.57,0,0,1,15,6.23L173.11,69a8,8,0,0,0,2.64,5.1,74.11,74.11,0,0,1,6.14,6.14,8,8,0,0,0,5.1,2.64l22.58,2.51a91.32,91.32,0,0,1,6.23,15l-14.19,17.74A8,8,0,0,0,199.87,123.66Z"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Remove color"
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              class="text-base"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="space-y-3"
        data-uid="SRGB"
      >
        <div
          class="flex items-center relative"
        >
          <input
            aria-hidden="true"
            class="sr-only absolute top-0 left-10"
            tabindex="-1"
            type="color"
            value="#FF0044"
          />
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 rounded-large !duration-150 transition-colors motion-reduce:transition-none rounded-e-none is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <button
                    aria-label="Color picker"
                    class="rounded-full shrink-0 size-6 cursor-pointer"
                    data-color="#FF0044"
                    data-uid="ColorCircle"
                    style="background-color: rgb(255, 0, 68);"
                    type="button"
                  />
                  <input
                    aria-label="Hex color"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-has-start-content="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_d_"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value="#FF0044"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            aria-label="Random color"
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium text-medium gap-3 rounded-large px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground min-w-12 w-12 h-12 data-[hover=true]:opacity-hover rounded-s-none border-l-0"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              class="text-xl"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
              />
            </svg>
          </button>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, hsl(0 100% 70%), hsl(60 100% 70%), hsl(120 100% 70%), hsl(180 100% 70%), hsl(240 100% 70%), hsl(300 100% 70%), hsl(360 100% 70%));"
        >
          <div
            aria-label="Hue"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_k_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                H
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 95.58210614059462%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 95.58210614059462%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_k_"
                      aria-orientation="horizontal"
                      aria-valuetext="344"
                      id="react-aria-_r_k_-0"
                      max="359.9"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="344"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, hsl(344 0% 50%), hsl(344 100% 50%));"
        >
          <div
            aria-label="Saturation"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_q_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                <button
                  class="shrink-0 text-lg"
                  type="button"
                >
                  S
                </button>
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="true"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 100%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 100%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_q_"
                      aria-orientation="horizontal"
                      aria-valuetext="100"
                      id="react-aria-_r_q_-0"
                      max="100"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="100"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="--slider-gradient: linear-gradient(to right, hsl(344 100% 0%), hsl(344 100% 50%), hsl(344 100% 100%));"
        >
          <div
            aria-label="Lightness"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_12_"
            role="group"
          >
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="w-3 mr-2"
                data-slot="startContent"
              >
                L
              </div>
              <div
                class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-transparent"
                  data-slot="filler"
                  style="left: 0%; width: 50%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 50%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_12_"
                      aria-orientation="horizontal"
                      aria-valuetext="50"
                      id="react-aria-_r_12_-0"
                      max="100"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="50"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
